Adjusted middle column min-height to prevent it from 'jumping' when switching from 1 column view to 2 column view.

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@ header {
 
 .middle-column {
     padding: 30px 0 0 15px;
-
+    min-height: 150px;
     grid-area: col2;
 }
 
